<resources>
    <string name="app_name">News</string>
    <string name="search_here">Search here</string>
    <string name="political">Political</string>
    <string name="crime">Crime</string>
    <string name="trending">Trending</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jai_shree_ram">Jai shree ram</string>
    <string name="enetrtainment">Enetrtainment</string>
    <string name="technology">Technology</string>
    <string name="art">Art</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="news">News</string>
    <string name="con">con</string>
    <string name="newss">NEWS</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="emails">Email</string>
    <string name="long_text">Please login to continue your account.</string>
    <string name="login">Login</string>
    <string name="new_user_register">New user! Register.</string>
    <string name="please_register_to_continue_your_account">Please register to continue your account.</string>
    <string name="registerr">Register</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="userProfile">Profile</string>
    <string name="update_email">Update email</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="update_dob">Update DOB</string>
    <string name="update_password">Update password</string>
    <string name="update_name">Update Name</string>
    <string name="refresh">Refresh</string>
    <string name="ayushsharmagit_gmail_com">ayushsharmagit@gmail.com</string>
    <string name="ayush_sharma">Ayush Sharma</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sss">News</string>
    <string name="already_have_a_account_login">Already have a account, Login!</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_a_new_password">Create a new password</string>
</resources>