<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="20dp"
    android:background="@color/white"

    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newss"
        android:textColor="@color/red"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_text"
        android:textSize="13sp"
        android:textStyle="normal"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        app:errorTextColor="@color/red"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittextshape"
            android:layout_height="wrap_content"
            android:hint="@string/emails"
            android:id="@+id/emailText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:errorTextColor="@color/red"
        app:hintTextColor="@color/black"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:background="@drawable/edittextshape"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:id="@+id/passwordText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="Forget password?"
        android:layout_marginStart="260dp"
        android:layout_marginTop="15dp"
        android:textSize="13sp"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="17sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/createnewidbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="Register" />


</LinearLayout>